# codex-find-me

./: README.md  pyproject.toml  requirements.txt
examples/: parity_detection.py
src/edge_midpoint_egnn/: __init__.py  baseline.py  graph.py  layers.py  model.py
tests/: test_forward.py  test_parity_example.py
