[project]
name = "edge-midpoint-egnn"
version = "0.1.0"
description = "Edge-midpoint frame-equivariant EGNN in PyTorch"
authors = [{name = "OpenAI Codex"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
